--- a/src/main/resources/META-INF/resources/UserScreens/SignUpPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignUpPage.html
@@ -79,6 +79,7 @@
         } else {
             const errorData = await response.json();
             alert("Error al registrar usuario: " + (errorData.message || "Intenta de nuevo."));
+            console.log(errorData + response);
         }
     } catch (error) {
         console.error("Error en el proceso:", error);
