--- a/src/main/resources/META-INF/resources/HomePage.html
+++ b/src/main/resources/META-INF/resources/HomePage.html
@@ -15,7 +15,7 @@
         <a href="HomePage.html">Inicio</a>
         <a href="#">Productos</a>
         <a href="BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
-        <a href="ReceipeListPage.html">Recetas</a>
+        <a href="Recipe/ReceipeListPage.html">Recetas</a>
         <a href="ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
@@ -42,9 +42,9 @@
         <section class="recipes">
             <h2>Recetas para Celíacos</h2>
             <div class="image-container">
-                <img src="images/gluten-free.png">
+                <img src="images/Gluten-free.png">
             </div>
-            <a href="ReceipeListPage.html">
+            <a href="Recipe/ReceipeListPage.html">
                 <button class="btn">Ver Recetas</button>
             </a>
 
@@ -67,5 +67,11 @@
     </section>
 
 </main>
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
 </body>
 </html>
