--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -18,7 +18,7 @@
         <a href="../HomePage.html">Inicio</a>
         <a href="#">Productos</a>
         <a href="../ShoppingListListingPageV2.html">Mis Listas</a>
-        <a href="../ReceipeListPage.html">Recetas</a>
+        <a href="../Recipe/ReceipeListPage.html">Recetas</a>
         <a href="../ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
