--- a/src/main/resources/META-INF/resources/Recipe/ReceipeListPage.html
+++ b/src/main/resources/META-INF/resources/Recipe/ReceipeListPage.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receta</title>
-    <link rel="stylesheet" href="css/RecipePage.css">
+    <link rel="stylesheet" href="../css/RecipeListStyles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images/NutriCelia.png">
+            <img src="../images/NutriCelia.png">
         </div>
         <nav>
-            <a href="HomePage.html">Inicio</a>
+            <a href="../HomePage.html">Inicio</a>
             <a href="#">Productos</a>
-            <a href="BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+            <a href="../BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
             <a href="ReceipeListPage.html">Recetas</a>
-            <a href="ForumPage.html">Foros</a>
+            <a href="../ForumPage.html">Foros</a>
         </nav>
         <div class="user-profile">
-            <img class="menu" src="images/menu-icon.png">
-            <a href="UserScreens/UserDataPage.html">
-                <button class="user-profile"><img src="images/icon-user.png"></button>
+            <img class="menu" src="../images/menu-icon.png">
+            <a href="../UserScreens/UserDataPage.html">
+                <button class="user-profile"><img src="../images/icon-user.png"></button>
             </a>
         </div>
     </header>
@@ -42,7 +42,15 @@
             </tr>
 
         </table>
+        <a href="RecipePage.html">
+            <button class="buttonr">Pagina de receta</button>
+        </a>
     </main>
-
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+            <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+        </div>
+    </footer>
 </body>
 </html>
