separación y ajuste del script

--- a/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
+++ b/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
@@ -61,109 +61,7 @@
   </table>
 </div>
 
-<script>
-  // Id de la lista que quieres cargar, podrías obtenerla dinámicamente
-  const idLista = 1; // Por ejemplo, la lista 1
-  const apiBaseUrl = 'http://localhost:8080/productsList'; // Cambia si usas otro host o puerto
-
-  // Cargar productos al cargar la página
-  document.addEventListener('DOMContentLoaded', () => {
-    cargarProductos();
-  });
-
-  // Función para obtener y renderizar la lista de productos
-  async function cargarProductos() {
-    try {
-      const response = await fetch(`${apiBaseUrl}/list/${idLista}`);
-      const productos = await response.json();
-      renderProductos(productos);
-    } catch (error) {
-      console.error('Error al cargar productos:', error);
-    }
-  }
-
-  // Renderizar los productos en la tabla
-  function renderProductos(productos) {
-    const tbody = document.getElementById('productos-body');
-    tbody.innerHTML = ''; // Limpiar antes de renderizar
-
-    productos.forEach(item => {
-      const tr = document.createElement('tr');
-
-      // Columna Producto (id_producto)
-      const tdProducto = document.createElement('td');
-      tdProducto.textContent = `Producto ${item.productsListId.nombre}`; // Aquí podrías cargar más info si la tuvieras
-
-      // Columna Cantidad (no tienes cantidad en el modelo aún) //Cambiar por supermercadi
-      const tdCantidad = document.createElement('td');
-      tdCantidad.textContent = '1'; // Por ahora es fijo, si quieres agregamos el campo luego
-
-      // Columna Opciones
-      const tdOpciones = document.createElement('td');
-
-      // Botón Eliminar
-      const btnEliminar = document.createElement('button');
-      btnEliminar.textContent = 'Eliminar';
-      btnEliminar.onclick = () => eliminarProducto(item.productsListId.id_lista, item.productsListId.id_producto);
-
-      // Botón Marcar como Comprado (puedes definir su lógica)
-      const btnMarcar = document.createElement('button');
-      btnMarcar.textContent = 'Marcar como Comprado';
-      btnMarcar.onclick = () => marcarComoComprado(item.productsListId.id_lista, item.productsListId.id_producto);
-
-      tdOpciones.appendChild(btnEliminar);
-      tdOpciones.appendChild(btnMarcar);
-
-      // Agregar columnas a la fila
-      tr.appendChild(tdProducto);
-      tr.appendChild(tdCantidad);
-      tr.appendChild(tdOpciones);
-
-      tbody.appendChild(tr);
-    });
-  }
-
-  // Función para eliminar un producto
-  async function eliminarProducto(id_lista, id_producto) {
-    if (!confirm('¿Estás seguro de eliminar este producto?')) return;
-
-    try {
-      const response = await fetch(`${apiBaseUrl}/${id_lista}/${id_producto}`, {
-        method: 'DELETE'
-      });
-
-      if (response.ok) {
-        alert('Producto eliminado');
-        cargarProductos(); // Recargar productos después de eliminar
-      } else {
-        alert('Error al eliminar producto');
-      }
-    } catch (error) {
-      console.error('Error al eliminar producto:', error);
-    }
-  }
-
-  // Función para marcar como comprado (esto depende de cómo manejes el estado en backend)
-  function marcarComoComprado(id_lista, id_producto) {
-    alert(`Producto ${id_producto} de la lista ${id_lista} marcado como comprado (esto es solo un placeholder)`);
-
-    // Aquí irá la opción de añadir confirmar que se ha comprado y se guardará en el historial
-
-  }
-
-  // Esto será donde se realizará la busqueda
-  const formBusqueda = document.getElementById('busqueda_productos');
-  formBusqueda.addEventListener('submit', (event) => {
-    event.preventDefault();
-    const query = formBusqueda.producto.value.toLowerCase();
-
-    const filas = document.querySelectorAll('#productos-body tr');
-    filas.forEach(fila => {
-      const productoTexto = fila.querySelector('td').textContent.toLowerCase();
-      fila.style.display = productoTexto.includes(query) ? '' : 'none';
-    });
-  });
-</script>
+<script src="js/productsList.js"></script>
 
 </main>
 </body>
