--- a/src/main/resources/META-INF/resources/Recipe/RecipePage.html
+++ b/src/main/resources/META-INF/resources/Recipe/RecipePage.html
@@ -13,7 +13,7 @@
     </div>
     <nav>
         <a href="../HomePage.html">Inicio</a>
-        <a href="#">Productos</a>
+        <a href="../ProductsList/ProductsList.html?idLista=0">Productos</a>
         <a href="../BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
         <a href="ReceipeListPage.html">Recetas</a>
         <a href="../ForumPage.html">Foros</a>
@@ -29,7 +29,6 @@
     <div class="picture">
         <h1 class="recipeName">Nombre de la receta</h1>
         <img class="recipeImg" src="../images/Gluten-free.png" alt="imagen de la receta">
-        <button class="botonreceta">Añadir receta</button>
     </div>
     <section class="info">
         <div class="icons">
@@ -69,5 +68,6 @@
         <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
     </div>
 </footer>
+<script src="RecipePage.js"></script>
 </body>
 </html>
