--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -16,8 +16,8 @@
     </div>
     <nav>
         <a href="../HomePage.html">Inicio</a>
-        <a href="#">Productos</a>
-        <a href="../ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="../ProductsList/ProductsList.html?idLista=0">Productos</a>
+        <a href="../BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
         <a href="../Recipe/ReceipeListPage.html">Recetas</a>
         <a href="../ForumPage.html">Foros</a>
     </nav>
