Detalles de lista a probar

--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -229,7 +229,7 @@
     }
 
     function goToProducts(id) {
-        window.location.href = `ShoppingListScreen.html?id_lista=${id}`;
+        window.location.href = `ShoppingListPage.html?id_lista=${id}`;
     }
 
     async function deleteBuyList(id) {
