--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listas de la compra - NutriCelia</title>
-    <link rel="stylesheet" href="../css/userstyles.css">
+    <link rel="stylesheet" href="../css/productsAtList.css">
 
     <!-- Vue.js y Axios -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
