--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -50,8 +50,23 @@
     </div>
 </main>
 
+<!--
+<main id="app">
+    <form @submit.prevent="createBuyList">
+        <input v-model="nombre" type="text" placeholder="Nombre de la nueva lista">
+        <button type="submit" class="btn">Crear Lista</button>
+    </form>
 
+    <section v-for="list in buyLists" :key="list.id" class="user-data" @click="goToProducts(list.id)">
+        <input v-if="editingId === list.id" v-model="editedName">
+        <p v-else><strong>{{ list.nombre }}</strong></p>
 
+        <button v-if="editingId !== list.id" @click="startEditing(list)" class="btn">Editar</button>
+        <button v-if="editingId === list.id" @click="saveEdit(list.id)" class="btn">Guardar</button>
+        <button @click="deleteBuyList(list.id)" class="btn">Eliminar</button>
+    </section>
+</main>
+-->
 <script>
     var userEmail = null;
     var userName = null;
@@ -145,6 +160,49 @@
     }
 
 
+    async function fetchUserBuyLists() {
+        if (!userEmail) {
+            alert("Email del usuario no disponible, intentando de nuevo...");
+            return;
+        }
+
+        try {
+            // Obtener todas las listas de compra
+            const listsResponse = await fetch("http://localhost:8080/buyListResource");
+            if (!listsResponse.ok) throw new Error("Error al obtener las listas de compra.");
+            const allLists = await listsResponse.json();
+
+            // Consultar listas a las que el usuario tiene acceso
+            const accessResponse = await fetch(`http://localhost:8080/usersWithAccesToList/user/${encodeURIComponent(userEmail)}`);
+            if (!accessResponse.ok) throw new Error("Error al obtener listas del usuario.");
+            const userAccessLists = await accessResponse.json();
+
+            // Extraer IDs de listas permitidas
+            const accessibleListIds = new Set(userAccessLists.map(entry => entry.id_lista));
+
+            // Filtrar listas accesibles para el usuario
+            const userLists = allLists.filter(list => accessibleListIds.has(list.id));
+
+            // Mostrar listas en la página
+            const container = document.getElementById("buyListsContainer");
+            container.innerHTML = userLists.length ? "" : "<p>No tienes listas disponibles.</p>";
+
+            userLists.forEach(list => {
+                const listElement = document.createElement("div");
+                listElement.classList.add("user-data");
+                listElement.innerHTML = `
+                    <p><strong>${list.nombre}</strong></p>
+                    <button onclick="deleteBuyList(${list.id})" class="btn">Eliminar</button>
+                `;
+                container.appendChild(listElement);
+            });
+
+        } catch (error) {
+            alert(error);
+        }
+    }
+
+
     async function fetchBuyLists() {
         try {
 
@@ -185,8 +243,7 @@
                     <p><strong>${list.nombre}</strong></p>
                     <div class="icons">
                         <i class="fas fa-share-alt" title="Compartir" onclick="event.stopPropagation(); compartirLista(${list.id})"></i>
-                        <i class="fas fa-pen" title="Editar" onclick="event.stopPropagation(); editBuyList(${list.id}, '${list.nombre}')"></i>
-                        <i class="fas fa-trash" title="Eliminar" onclick="event.stopPropagation(); deleteBuyList(${list.id})"></i>
+                        <i class="fas fa-pen" title="Editar" onclick="event.stopPropagation(); openEditPopup(${list.id}, '${list.nombre}')"></i>                        <i class="fas fa-trash" title="Eliminar" onclick="event.stopPropagation(); deleteBuyList(${list.id})"></i>
                         <i class="fas fa-chevron-right" title="Ir a la lista" onclick="event.stopPropagation(); goToProducts('${list.nombre}')"></i>
                     </div>
                 `;
@@ -229,8 +286,8 @@
         }
     }
 
-    async function editBuyList(id, currentName) {
-        const newName = prompt("Introduce el nuevo nombre para la lista:", currentName);
+
+    async function editBuyList(id, currentName, newName) {
         if (!newName || newName.trim() === "") {
             alert("Nombre inválido.");
             return;
@@ -258,10 +315,43 @@
         }
     }
 
+    let listaIdActual = null;
+    let listaNombreActual = null;
+
+    function openEditPopup(id, currentName) {
+        listaIdActual = id;
+        listaNombreActual = currentName;
+
+        const input = document.getElementById("new-name");
+        input.value = currentName;
+
+        document.getElementById("editPopup").style.display = "block";
+    }
+
+    function closePopup() {
+        document.getElementById("editPopup").style.display = "none";
+    }
+
+    function saveChanges() {
+        const newName = document.getElementById("new-name").value;
+        editBuyList(listaIdActual, listaNombreActual, newName);
+        closePopup();
+    }
+
     function compartirLista(id) {
         alert(`Compartir lista con ID: ${id} (Guillem tiene que hacer esta parte)`);
     }
 
 </script>
+    <!-- Popup para editar el nombre de la lista -->
+    <div id="editPopup" class="popup">
+        <div class="popup-content">
+            <button class="close-btn" onclick="closePopup()">&times;</button>
+            <h2>Modificar Lista</h2>
+            <label for="new-name">Nuevo nombre de la lista:</label>
+            <input type="text" id="new-name">
+            <button onclick="saveChanges()" class="btn">Guardar Cambios</button>
+        </div>
+    </div>
 </body>
 </html>
